; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/iterator/extr_iterator.c_target_count_increase.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/iterator/extr_iterator.c_target_count_increase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iter_qstate = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iter_qstate*, i32)* @target_count_increase to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @target_count_increase(%struct.iter_qstate* %0, i32 %1) #0 {
  %3 = alloca %struct.iter_qstate*, align 8
  %4 = alloca i32, align 4
  store %struct.iter_qstate* %0, %struct.iter_qstate** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.iter_qstate*, %struct.iter_qstate** %3, align 8
  %6 = call i32 @target_count_create(%struct.iter_qstate* %5)
  %7 = load %struct.iter_qstate*, %struct.iter_qstate** %3, align 8
  %8 = getelementptr inbounds %struct.iter_qstate, %struct.iter_qstate* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %19

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.iter_qstate*, %struct.iter_qstate** %3, align 8
  %14 = getelementptr inbounds %struct.iter_qstate, %struct.iter_qstate* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 1
  %17 = load i32, i32* %16, align 4
  %18 = add nsw i32 %17, %12
  store i32 %18, i32* %16, align 4
  br label %19

19:                                               ; preds = %11, %2
  ret void
}

declare dso_local i32 @target_count_create(%struct.iter_qstate*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
